syntax = "proto3";

option csharp_namespace = "BankClient.Bl.Grpc";

package authentication;

service Authentication {
  rpc Login (LoginRequest) returns (LoginResponse);
}

message LoginRequest {
  string phone_number = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
}
